--- a/content/projects/project2.mdx
+++ b/content/projects/project2.mdx
@@ -1,9 +1,11 @@
 ---
-title: project2
-description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-date: "2023-04-01"
+title: Project
+description: ...
+date:
 url: /
 published: true
 ---
+
+# Project
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
