--- a/content/projects/html-portfoliov1.mdx
+++ b/content/projects/html-portfoliov1.mdx
@@ -7,7 +7,7 @@ url: https://clay-k0.netlify.app
 published: true
 ---
 
-# portfolio v1
+# Portfolio V1
 
 This is the portfolio i used before this one. It was made with [HTML](https://developer.mozilla.org/en-US/docs/Web/HTML), [SCSS](https://sass-lang.com/), and [Javascript](https://developer.mozilla.org/en-US/docs/Web/JavaScript), and it is hosted on [Netlify](https://www.netlify.com/). The design is rather simple, even more so than this one, but i still like it.
 
