--- a/content/projects/html-portfoliov1.mdx
+++ b/content/projects/html-portfoliov1.mdx
@@ -1,6 +1,6 @@
 ---
 title: Portfolio V1
-description: This is the portfolio I used previously.
+description: This is the portfolio I used previous to this one. It was made with HTML, SCSS, and Javascript.
 date: 2023-05-23
 repository: clay-k0/portfolio
 url: https://clay-k0.netlify.app
@@ -9,7 +9,7 @@ published: true
 
 # Portfolio V1
 
-This is the portfolio i used before this one. It was made with [HTML](https://developer.mozilla.org/en-US/docs/Web/HTML), [SCSS](https://sass-lang.com/), and [Javascript](https://developer.mozilla.org/en-US/docs/Web/JavaScript), and it is hosted on [Netlify](https://www.netlify.com/). The design is rather simple, even more so than this one, but i still like it.
+This is the portfolio i used before this one. It was made with [HTML](https://developer.mozilla.org/en-US/docs/Web/HTML), [SCSS](https://sass-lang.com/), and [Javascript](https://developer.mozilla.org/en-US/docs/Web/JavaScript), and it is hosted on [Netlify](https://www.netlify.com/). The design is rather simple, even more so than this one, but I still like it.
 
 ## How to run locally
 
