--- a/content/projects/ematchi.mdx
+++ b/content/projects/ematchi.mdx
@@ -26,7 +26,7 @@ npm install
 npm run dev
 ```
 
-## Screenshots
+## Screenshots (TODO)
 
 ![screenshot 1](./screenshots/screenshot1.png)
 ![screenshot 2](./screenshots/screenshot2.png)
