--- a/content/projects/portfoliov1.mdx
+++ b/content/projects/portfoliov1.mdx
@@ -22,7 +22,7 @@ npm install
 npm start
 ```
 
-## Screenshots
+## Screenshots (TODO)
 
 ![screenshot 1](./screenshots/screenshot1.png)
 ![screenshot 2](./screenshots/screenshot2.png)
